--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "docs:dev": "vitepress dev",
     "docs:build": "vitepress build",
     "docs:preview": "vitepress preview"
+  },
+  "dependencies": {
+    "@iconify/vue": "^5.0.0"
   }
 }
